@@ -5,6 +5,8 @@
 
 	Fixed line number column not including padding to the left of it.
 
+	Fixed local options not being loaded on Ctrl-W x.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
